test/cases/error/function-wrong-arg.cba
-- @expect-error: Type mismatch
(fun x -> return (x + 1)) true
